Fix postcode validation, fix dropdown menu letters cutting off

--- a/scss/custom/pages/_values_test.scss
+++ b/scss/custom/pages/_values_test.scss
@@ -1,4 +1,8 @@
-.survey {
+#survey {
   margin-top: 40px;
   margin-bottom: 40px;
+
+  select {
+    height: auto;
+  }
 }
